figuring out how files are related in jekyll structure. changing styling along the way and optimizing relations

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<section id='home'>
+      <section id='home'>
         <div class='container'>
           <img class='hero' src='/assets/imgs/static/headshot_alt.jpg' />
-          <header><h1>clarisse valera</h1></header>
+          <header><h1 class='hero-name'>clarisse valera</h1></header>
           <p>I am full stack web developer with a particular knack for front end development.</p>
           <p>I love writing clean, organized code, and building applications that matter.</p>
           <a class='button' href='mailto:clarisse.valera@cal.berkeley.edu'>Send me an email</a>
