functional pagination, migrating posts from previous blog to current site. imgs centered appropriately, pre and code tags working

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@ layout: default
           <div class='row'>
             <div class='four columns'>
               <img class='skill icon' src='/assets/imgs/static/frontend.png' />
-              <h3>Front End</h3>
+              <h3 class='skill-title'>Front End</h3>
               <p>I love figuring out how to translate seamless functionality into simple, clean and timeless interfaces. I am particularly enamored with purposeful yet engaging applications.</p>
               <p class='subtext'>JavaScript / jQuery / HTML5 / CSS3 / SASS</p>
             </div>
             <div class='four columns'>
               <img class='skill icon' src='/assets/imgs/static/backend.png' />
-              <h3>Back End</h3>
+              <h3 class='skill-title'>Back End</h3>
               <p>I'm focused on creating well-structured and efficient code that serves as a solid foundation for any application. I find joy in segregating code into functional sections.</p>
               <p class='subtext'>Ruby / Rails / SQL / RESTful Architecture</p>
             </div>
             <div class='four columns'>
               <img class='skill icon' src='/assets/imgs/static/heart.png' />
-              <h3>Soft Skills</h3>
+              <h3 class='skill-title'>Soft Skills</h3>
               <p>Having previously worked as a paralegal in large antitrust cases, I bring with me many skills that make me an independently minded, but very effective team player.</p>
               <p class='subtext'>quick learner / strong communicator / highly organized / independent thinker / empathetic team member / adaptable</p>
             </div>
@@ -41,7 +41,7 @@ layout: default
         <div class='container'>
           <div class='row'>
             <div class='six columns'>
-              <h3><a href='http://GTFO-client.herokuapp.com/'>Get The Flight Out</a></h3>
+              <h3 class='proj-title'><a href='http://GTFO-client.herokuapp.com/'>Get The Flight Out</a></h3>
                <p>Built in 6 days as a final project for Dev Bootcamp, Get The Flight Out is a decoupled web app that allows a user to view all the destinations they can fly to, given their budget, originating city, and travel dates.</p>
               <p class='subtext'>Ruby on Rails / JavaScript / AJAX / jQuery / HTML5 / CSS3 / PostgreSQL</p>
             </div>
@@ -51,7 +51,7 @@ layout: default
           </div>
           <div class='row'>
             <div class='six columns'>
-              <h3><a href='http://snappysearch.herokuapp.com/'>Snappy</a></h3>
+              <h3 class='proj-title'><a href='http://snappysearch.herokuapp.com/'>Snappy</a></h3>
               <p>Snappy is a web app that allows a user to search for Instagram photos by location. Built in one week / it utilizes the Instagram API and features RESTful architecture.</p>
               <p class='subtext'>Ruby / JavaScript / jQuery / AJAX / HTML5 / CSS3 / PostgreSQL</p>
             </div>
@@ -61,7 +61,7 @@ layout: default
           </div>
           <div class='row'>
             <div class='six columns'>
-              <h3><a href='http://short-en.herokuapp.com/'>Short.en</a></h3>
+              <h3 class='proj-title'><a href='http://short-en.herokuapp.com/'>Short.en</a></h3>
               <p>Short.en is a simple URL shortener that I built in one day.</p>
               <p class='subtext'>Ruby / HTML5 / CSS3 / PostgreSQL</p>
             </div>
