--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
         <div class='container'>
           <img class='hero' src='/assets/imgs/static/headshot_alt.jpg' />
           <header><h1 class='hero-name'>clarisse valera</h1></header>
-          <p>I am full stack web developer with a particular knack for front end development.</p>
+          <p>I am a full stack web developer with a particular knack for front end development.</p>
           <p>I love writing clean, organized code, and building applications that matter.</p>
           <a class='button' href='mailto:clarisse.valera@cal.berkeley.edu'>Send me an email</a>
         </div>
