add and style social media icons to home section of index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@ layout: default
           <p>I am a full stack web developer with a particular knack for front end development.</p>
           <p>I love writing clean, organized code, and building applications that matter.</p>
           <a class='button' href='mailto:clarisse.valera@cal.berkeley.edu'>Send me an email</a>
+          <div class="socmedia">
+            <ul>
+              <li>
+                <a href="http://www.github.com/mcvalera">
+                  <img class='social-media' src='{{ '/assets/imgs/sprites/github.svg' | prepend: site.baseurl }}' />
+                </a>
+              </li>
+              <li>
+                <a href="http://www.linkedin.com/in/clarissevalera">
+                  <img class='social-media' src='{{ '/assets/imgs/sprites/linkedin.svg' | prepend: site.baseurl }}' />
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/claaang">
+                  <img class='social-media' src='{{ '/assets/imgs/sprites/twitter.svg' | prepend: site.baseurl }}' />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/clarisse.valera">
+                   <img class='social-media' src='{{ '/assets/imgs/sprites/facebook.svg' | prepend: site.baseurl }}' />
+                </a>
+              </li>
+              <li>
+                <a href="http://instagram.com/clangvalera/">
+                  <img class='social-media' src='{{ '/assets/imgs/sprites/instagram.svg' | prepend: site.baseurl }}' />
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
